--- a/03-database.yaml
+++ b/03-database.yaml
@@ -1,20 +1,19 @@
-# Redis
+# PostgreSQL
 
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: mastodon1-redis
+  name: postgres
   namespace: fediverse
   labels:
-    fediverse/app: mastodon1
-    fediverse/name: redis
+    app: postgres
     fediverse/role: database
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 20Mi
+      storage: 100Mi
   storageClassName: fediverse-database
 
 ---
@@ -22,65 +21,59 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mastodon1-redis
+  name: postgres
   namespace: fediverse
   labels:
-    fediverse/app: mastodon1
-    fediverse/name: redis
+    app: postgres
     fediverse/role: database
 spec:
   replicas: 1
   selector:
     matchLabels:
-      fediverse/app: mastodon1
-      fediverse/name: redis
+      app: postgres
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
-        fediverse/app: mastodon1
-        fediverse/name: redis
-        fediverse/role: database
+        app: postgres
     spec:
       containers:
-        - name: mastodon1-redis
-          image: redis:4.0-alpine
+        - name: postgres
+          image: postgres:11.2-alpine
           livenessProbe:
             exec:
-              command: [/bin/sh, -c, redis-cli ping]
+              command: [/bin/sh, -c, pg_isready -U postgres]
           ports:
-            - containerPort: 6379
+            - containerPort: 5432
               protocol: TCP
           resources:
             requests:
-              memory: 10Mi
+              memory: 70Mi
           volumeMounts:
             - name: data
-              mountPath: /data
+              mountPath: /var/lib/postgresql/data
       volumes:
         - name: data
           persistentVolumeClaim:
-            claimName: mastodon1-redis
+            claimName: postgres
 
 ---
 
 apiVersion: v1
 kind: Service
 metadata:
-  name: mastodon1-redis
+  name: postgres
   namespace: fediverse
   labels:
-    fediverse/app: mastodon1
-    fediverse/name: redis
+    app: postgres
     fediverse/role: database
 spec:
   clusterIP: None
   ports:
-    - name: redis
+    - name: postgres
       protocol: TCP
-      port: 6379
-      targetPort: 6379
+      port: 5432
+      targetPort: 5432
   selector:
-    fediverse/app: mastodon1
-    fediverse/name: redis
+    app: postgres
