--- a/mastodon1/01-config.yaml
+++ b/mastodon1/01-config.yaml
@@ -8,9 +8,9 @@ metadata:
     fediverse/app: mastodon1
 data:
   REDIS_HOST: mastodon1-redis
-  DB_HOST: mastodon1-db
-  DB_USER: postgres
-  DB_NAME: postgres
+  DB_HOST: postgres
+  DB_USER: mastodon1
+  DB_NAME: mastodon1
   LOCAL_DOMAIN: mastodon1.fediverse.local.azyobuzi.net
   LOCAL_HTTPS: "true"
   STREAMING_API_BASE_URL: wss://mastodon1.fediverse.local.azyobuzi.net
